updated a new feature better gemini model integration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Medilink | Your learning patner</title>
+  <link rel="shortcut icon" href="./src/assets/logo.webp" type="image/x-icon">
   <link href="https://api.fontshare.com/v2/css?f[]=nippo@400,700,900&display=swap" rel="stylesheet" />
   <link href="https://api.fontshare.com/v2/css?f[]=array@400,700,900&display=swap" rel="stylesheet" />
 </head>
